--- a/cookomix.css
+++ b/cookomix.css
@@ -1,20 +1,36 @@
 /* CSS */
-
-
-.button-pushable {
-	position: relative;
-	border: none;
-	background: transparent;
-	padding: 0;
+.button {
+	align-items: center;
+	appearance: none;
+	background-color: #FCFCFD;
+	border-radius: 4px;
+	border-width: 0;
+	box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+	box-sizing: border-box;
+	color: #36395A;
 	cursor: pointer;
-	outline-offset: 4px;
-	transition: filter 250ms;
+	display: inline-flex;
+	font-family: "JetBrains Mono", monospace;
+	height: 48px;
+	justify-content: center;
+	line-height: 1;
+	list-style: none;
+	overflow: hidden;
+	padding-left: 16px;
+	padding-right: 16px;
+	position: relative;
+	text-align: left;
+	text-decoration: none;
+	transition: box-shadow .15s, transform .15s;
 	user-select: none;
 	-webkit-user-select: none;
 	touch-action: manipulation;
+	white-space: nowrap;
+	will-change: box-shadow, transform;
+	font-size: 18px;
 }
 
-.button-pushable {
+.button {
 	top: 10px;
 	position: fixed;
 	height: 40px;
@@ -23,82 +39,17 @@
 	z-index: 9999999;
 }
 
-.button-shadow {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	border-radius: 12px;
-	background: hsl(0deg 0% 0% / 0.25);
-	will-change: transform;
-	transform: translateY(2px);
-	transition:
-		transform 600ms cubic-bezier(.3, .7, .4, 1);
+
+.button:focus {
+	box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
 }
 
-.button-edge {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	border-radius: 12px;
-	background: linear-gradient(to left,
-			hsl(340deg 100% 16%) 0%,
-			hsl(340deg 100% 32%) 8%,
-			hsl(340deg 100% 32%) 92%,
-			hsl(340deg 100% 16%) 100%);
-}
-
-.button-front {
-	display: block;
-	position: relative;
-	padding: 12px 27px;
-	border-radius: 12px;
-	font-size: 1.1rem;
-	color: white;
-	background: hsl(345deg 100% 47%);
-	will-change: transform;
-	transform: translateY(-4px);
-	transition:
-		transform 600ms cubic-bezier(.3, .7, .4, 1);
-}
-
-@media (min-width: 768px) {
-	.button-front {
-		font-size: 1.25rem;
-		padding: 12px 42px;
-	}
-}
-
-.button-pushable:hover {
-	filter: brightness(110%);
-	-webkit-filter: brightness(110%);
-}
-
-.button-pushable:hover .button-front {
-	transform: translateY(-6px);
-	transition:
-		transform 250ms cubic-bezier(.3, .7, .4, 1.5);
-}
-
-.button-pushable:active .button-front {
+.button:hover {
+	box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
 	transform: translateY(-2px);
-	transition: transform 34ms;
 }
 
-.button-pushable:hover .button-shadow {
-	transform: translateY(4px);
-	transition:
-		transform 250ms cubic-bezier(.3, .7, .4, 1.5);
-}
-
-.button-pushable:active .button-shadow {
-	transform: translateY(1px);
-	transition: transform 34ms;
-}
-
-.button-pushable:focus:not(:focus-visible) {
-	outline: none;
+.button:active {
+	box-shadow: #D6D6E7 0 3px 7px inset;
+	transform: translateY(2px);
 }
