--- a/cookomix.css
+++ b/cookomix.css
@@ -1,5 +1,5 @@
 /* CSS */
-.button {
+.button-copy {
 	align-items: center;
 	appearance: none;
 	background-color: #FCFCFD;
@@ -30,7 +30,7 @@
 	font-size: 18px;
 }
 
-.button {
+.button-copy {
 	top: 10px;
 	position: fixed;
 	height: 40px;
@@ -40,16 +40,16 @@
 }
 
 
-.button:focus {
+.button-copy:focus {
 	box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
 }
 
-.button:hover {
+.button-copy:hover {
 	box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
 	transform: translateY(-2px);
 }
 
-.button:active {
+.button-copy:active {
 	box-shadow: #D6D6E7 0 3px 7px inset;
 	transform: translateY(2px);
 }
