--- a/cookomix.css
+++ b/cookomix.css
@@ -41,15 +41,17 @@
 
 
 .button-copy:focus {
-	box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+	box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset !important;
 }
 
 .button-copy:hover {
-	box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-	transform: translateY(-2px);
+	box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset !important;
+	transform: translateY(-2px) !important;
+	background: initial !important;
+	color: #36395A !important;
 }
 
 .button-copy:active {
-	box-shadow: #D6D6E7 0 3px 7px inset;
-	transform: translateY(2px);
+	box-shadow: #D6D6E7 0 3px 7px inset !important;
+	transform: translateY(2px) !important;
 }
