--- a/cookomix.css
+++ b/cookomix.css
@@ -2,12 +2,12 @@
 .button-copy {
 	align-items: center;
 	appearance: none;
-	background-color: #FCFCFD;
+	background-color: #5e8e79;
 	border-radius: 4px;
 	border-width: 0;
 	box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
 	box-sizing: border-box;
-	color: #36395A;
+	color: #fff;
 	cursor: pointer;
 	display: inline-flex;
 	font-family: "JetBrains Mono", monospace;
