--- a/cookomix.css
+++ b/cookomix.css
@@ -47,8 +47,8 @@
 .button-copy:hover {
 	box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset !important;
 	transform: translateY(-2px) !important;
-	background: initial !important;
-	color: #36395A !important;
+	background: #fff !important;
+	color: #5e8e79 !important;
 }
 
 .button-copy:active {
