--- a/cookomix.css
+++ b/cookomix.css
@@ -10,7 +10,6 @@
 	cursor: pointer;
 	display: inline-flex;
 	font-family: Verdana, monospace;
-	height: 48px;
 	justify-content: center;
 	line-height: 1;
 	list-style: none;
@@ -25,9 +24,6 @@
 	touch-action: manipulation;
 	white-space: nowrap;
 	font-size: 14px;
-}
-
-.button-copy {
 	top: 10px;
 	position: fixed;
 	height: 40px;
@@ -43,4 +39,5 @@
 	transform: translateY(-2px) !important;
 	background: #fff !important;
 	color: #5e8e79 !important;
+	transition: background-color 0.5s ease;
 }
