--- a/cookidoo.css
+++ b/cookidoo.css
@@ -2,7 +2,7 @@
 .button-copy {
 	align-items: center;
 	appearance: none;
-	background-color: #5e8e79;
+	background-color: #009a3d;
 	border-radius: 4px;
 	border-width: 0;
 	box-sizing: border-box;
@@ -36,9 +36,9 @@
 .button-copy:active,
 .button-copy:focus,
 .button-copy:hover {
-	border: 1px solid #5e8e79 !important;
+	border: 1px solid #009a3d !important;
 	transform: translateY(-2px) !important;
 	background: #fff !important;
-	color: #5e8e79 !important;
+	color: #009a3d !important;
 	transition: background-color 0.5s ease;
 }
