--- a/cookomix.css
+++ b/cookomix.css
@@ -42,3 +42,26 @@
 	color: #5e8e79 !important;
 	transition: background-color 0.5s ease;
 }
+
+.button-copy {
+	background-color: #ccc;
+	border: 4px solid #fff;
+	padding: 2em;
+	width: 16em;
+	height: 16em;
+	position: relative;
+	margin: 0 auto;
+}
+
+.button-copy:before {
+	background: none;
+	border: 4px solid #fff;
+	content: "";
+	display: block;
+	position: absolute;
+	top: 4px;
+	left: 4px;
+	right: 4px;
+	bottom: 4px;
+	pointer-events: none;
+}
