--- a/cookomix.css
+++ b/cookomix.css
@@ -55,7 +55,7 @@
 
 .button-copy:before {
 	background: none;
-	border: 4px solid #fff;
+	border: 4px solid #5e8e79;
 	content: "";
 	display: block;
 	position: absolute;
