--- a/cookomix.css
+++ b/cookomix.css
@@ -1,8 +1,12 @@
 /* CSS */
+:root {
+	--main-color: #5e8e79;
+}
+
 .button-copy {
 	align-items: center;
 	appearance: none;
-	background-color: #5e8e79;
+	background-color: var(--main-color);
 	border-radius: 4px;
 	border-width: 0;
 	box-sizing: border-box;
@@ -36,25 +40,21 @@
 .button-copy:active,
 .button-copy:focus,
 .button-copy:hover {
-	border: 1px solid #5e8e79 !important;
+	border: 1px solid var(--main-color) !important;
 	transform: translateY(-2px) !important;
 	background: #fff !important;
-	color: #5e8e79 !important;
+	color: var(--main-color) !important;
 	transition: background-color 0.5s ease;
 }
 
-.button-copy {
-	border: 4px solid #fff;
-}
-
 .button-copy:before {
-	border: 4px solid #5e8e79;
+	border: 1px solid #fff;
 	content: "";
 	display: block;
 	position: absolute;
-	top: 4px;
-	left: 4px;
-	right: 4px;
-	bottom: 4px;
+	top: 2px;
+	left: 2px;
+	right: 2px;
+	bottom: 2px;
 	pointer-events: none;
 }
