--- a/cookomix.css
+++ b/cookomix.css
@@ -1,6 +1,7 @@
 /* CSS */
 :root {
-	--main-color: #5e8e79;
+	--main-color: #549635;
+	--second-color: #b0b912;
 }
 
 .button-copy {
@@ -10,7 +11,7 @@
 	border-radius: 4px;
 	border-width: 0;
 	box-sizing: border-box;
-	color: #fff;
+	color: var(--second-color);
 	cursor: pointer;
 	display: inline-flex;
 	font-family: Verdana, monospace;
@@ -42,13 +43,13 @@
 .button-copy:hover {
 	border: 1px solid var(--main-color) !important;
 	transform: translateY(-2px) !important;
-	background: #fff !important;
+	background: var(--second-color) !important;
 	color: var(--main-color) !important;
 	transition: background-color 0.5s ease;
 }
 
 .button-copy:before {
-	border: 1px solid #fff;
+	border: 1px solid var(--second-color);
 	content: "";
 	display: block;
 	position: absolute;
