--- a/cookomix.css
+++ b/cookomix.css
@@ -5,13 +5,13 @@
 }
 
 .button-copy {
+	background-color: var(--main-color);
+	color: var(--second-color);
 	align-items: center;
 	appearance: none;
-	background-color: var(--main-color);
 	border-radius: 4px;
 	border-width: 0;
 	box-sizing: border-box;
-	color: var(--second-color);
 	cursor: pointer;
 	display: inline-flex;
 	font-family: Verdana, monospace;
@@ -41,11 +41,22 @@
 .button-copy:active,
 .button-copy:focus,
 .button-copy:hover {
-	border: 1px solid var(--main-color) !important;
-	transform: translateY(-2px) !important;
 	background: var(--second-color) !important;
 	color: var(--main-color) !important;
+	transform: translateY(-2px) !important;
 	transition: background-color 0.5s ease;
+}
+
+.button-copy:before {
+	border: 1px solid var(--main-color);
+	content: "";
+	display: block;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	right: 2px;
+	bottom: 2px;
+	pointer-events: none;
 }
 
 .button-copy:before {
