--- a/cookomix.css
+++ b/cookomix.css
@@ -2,11 +2,12 @@
 :root {
 	--main-color: #549635;
 	--second-color: #b0b912;
+	--text-color: #fff;
 }
 
 .button-copy {
 	background-color: var(--main-color);
-	color: var(--second-color);
+	color: var(--text-color);
 	align-items: center;
 	appearance: none;
 	border-radius: 4px;
@@ -42,7 +43,7 @@
 .button-copy:focus,
 .button-copy:hover {
 	background: var(--second-color) !important;
-	color: var(--main-color) !important;
+	color: var(--text-color) !important;
 	transform: translateY(-2px) !important;
 	transition: background-color 0.5s ease;
 }
