--- a/cookidoo.css
+++ b/cookidoo.css
@@ -1,12 +1,18 @@
 /* CSS */
+:root {
+	--main-color: #009a3d;
+	--second-color: #0a853b;
+	--text-color: #fff;
+}
+
 .button-copy {
+	background-color: var(--main-color);
+	color: var(--text-color);
 	align-items: center;
 	appearance: none;
-	background-color: #009a3d;
 	border-radius: 4px;
 	border-width: 0;
 	box-sizing: border-box;
-	color: #fff;
 	cursor: pointer;
 	display: inline-flex;
 	font-family: Verdana, monospace;
@@ -36,9 +42,32 @@
 .button-copy:active,
 .button-copy:focus,
 .button-copy:hover {
-	border: 1px solid #009a3d !important;
+	background: var(--second-color) !important;
+	color: var(--text-color) !important;
 	transform: translateY(-2px) !important;
-	background: #fff !important;
-	color: #009a3d !important;
 	transition: background-color 0.5s ease;
+}
+
+.button-copy:before {
+	border: 1px solid var(--main-color);
+	content: "";
+	display: block;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	right: 2px;
+	bottom: 2px;
+	pointer-events: none;
+}
+
+.button-copy:before {
+	border: 1px solid var(--second-color);
+	content: "";
+	display: block;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	right: 2px;
+	bottom: 2px;
+	pointer-events: none;
 }
