--- a/cookidoo.css
+++ b/cookidoo.css
@@ -1,8 +1,8 @@
 /* CSS */
 :root {
-	--main-color: #009a3d;
-	--second-color: #0a853b;
-	--text-color: #fff;
+	--main-color: #efefef;
+	--second-color: #c1c1c2;
+	--text-color: #113c2b;
 }
 
 .button-copy {
