--- a/cookomix.css
+++ b/cookomix.css
@@ -48,7 +48,7 @@
 	transition: background-color 0.5s ease;
 }
 
-.button-copy:before {
+.button-copy:hover:before {
 	border: 1px solid var(--main-color);
 	content: "";
 	display: block;
