--- a/getshape.css
+++ b/getshape.css
@@ -69,3 +69,21 @@
 	bottom: 2px;
 	pointer-events: none;
 }
+
+.idealista
+{
+	background-color: #edfca2;
+    border-color: #b1d004;
+    box-sizing: border-box;
+    display: inline-block;
+    padding: .25rem 1.25rem;
+    margin-top: .375rem;
+	
+}
+
+.idealista:hover{
+	background-color: #fff;
+    color: #b62682;
+    border-color: #b62682;
+    border-radius: 1rem;
+}
