--- a/getshape.css
+++ b/getshape.css
@@ -72,13 +72,27 @@
 
 .idealista
 {
+	
 	background-color: #edfca2;
     border-color: #b1d004;
     box-sizing: border-box;
     display: inline-block;
     padding: .25rem 1.25rem;
     margin-top: .375rem;
-	
+	        margin: .45rem 0;
+
+		padding-left: 16px;
+	padding-right: 16px;
+	position: relative;
+	font-size: 14px;
+	top: 4px;
+	position: fixed;
+	height: 36px;
+	width: 200px;
+	right: calc(50% - 100px);
+	z-index: 9999999;
+	line-height: 36px;
+
 }
 
 .idealista:hover{
