--- a/getshape.css
+++ b/getshape.css
@@ -5,72 +5,7 @@
 	--text-color: #fff;
 }
 
-.button-copy {
-	background-color: var(--main-color);
-	color: var(--text-color);
-	align-items: center;
-	appearance: none;
-	border-radius: 4px;
-	border-width: 0;
-	box-sizing: border-box;
-	cursor: pointer;
-	display: inline-flex;
-	font-family: Verdana, monospace;
-	justify-content: center;
-	line-height: 1;
-	list-style: none;
-	overflow: hidden;
-	padding-left: 16px;
-	padding-right: 16px;
-	position: relative;
-	text-align: left;
-	text-decoration: none;
-	user-select: none;
-	-webkit-user-select: none;
-	touch-action: manipulation;
-	white-space: nowrap;
-	font-size: 14px;
-	top: 4px;
-	position: fixed;
-	height: 36px;
-	width: 200px;
-	right: calc(50% - 100px);
-	z-index: 9999999;
-	line-height: 36px;
-}
-
-.button-copy:before {
-	border: 1px solid var(--second-color);
-	content: "";
-	display: block;
-	position: absolute;
-	top: 2px;
-	left: 2px;
-	right: 2px;
-	bottom: 2px;
-	pointer-events: none;
-}
-
-.button-copy:hover {
-	background: var(--second-color) !important;
-	color: var(--text-color) !important;
-	transform: translateY(-2px) !important;
-	transition: background-color 0.5s ease;
-}
-
-.button-copy:hover:before {
-	border: 1px solid var(--main-color);
-	content: "";
-	display: block;
-	position: absolute;
-	top: 2px;
-	left: 2px;
-	right: 2px;
-	bottom: 2px;
-	pointer-events: none;
-}
-
-.idealista
+.button-copy
 {
 	
 	    border: solid .0625rem #e5e6e1;
@@ -104,7 +39,7 @@
 
 }
 
-.idealista:hover{
+.button-copy:hover{
 	background-color: #fff;
     color: #b62682;
     border-color: #b62682;
