--- a/getshape.css
+++ b/getshape.css
@@ -4,6 +4,26 @@
 	--second-color: #b0b912;
 	--text-color: #fff;
 }
+.button-copy .icon-draw
+{
+	adding-top: 8.25rem; */
+    /* padding-bottom: .25rem; */
+    /* width: 24px; */
+    line-height: 24px;
+    height: 24px;
+    /* position: relative; */
+    position: absolute;
+    padding-right: 12px;
+    width: 24px;
+    top: 3px;
+    /* vertical-align: middle;
+}
+
+.button-copy .icon-text
+{
+padding-left: 25px;
+}
+
 .button-copy .icon-draw:before
 {
     color: #b62682;
